--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
         <nav>
             <menu id="main-menu">
                 <li class="about-me">
-                    <button><a class="about" href="index.html">About Me</a></button>
+                    <button class="abt"><a class="about" href="index.html">About Me</a></button>
                 </li>
 <!-- Menu Icon -->
             <button id="mobile-menu-button">
-                <img id="mobile-menu-icon" src="assets/images/menu.svg" width="50px">
+                <img id="mobile-menu-icon" src="assets/imgs/menu.svg" width="50px">
                 <br>
                 <span id="mobile-menu-text">Menu</span>
             </button>
@@ -57,12 +57,12 @@
                         <button class="med">Mediums</button>
                             <svg width="20px" height="20px" viewBox="0 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path fill-rule="evenodd" clip-rule="evenodd" d="M12.7071 14.7071C12.3166 15.0976 11.6834 15.0976 11.2929 14.7071L6.29289 9.70711C5.90237 9.31658 5.90237 8.68342 6.29289 8.29289C6.68342 7.90237 7.31658 7.90237 7.70711 8.29289L12 12.5858L16.2929 8.29289C16.6834 7.90237 17.3166 7.90237 17.7071 8.29289C18.0976 8.68342 18.0976 9.31658 17.7071 9.70711L12.7071 14.7071Z" fill="#000000"/>
-                                </svg>
+                            </svg>
                         <div class="dropdown">
                            <a class="paint" href="pages/paintings/index.html">Paintings</a>
                            <a class="print" href="pages/print-making/index.html">Print Making</a>
                            <a class="anim" href="pages/animation/index.html">Animations</a>
-                         </div>
+                        </div>
                     </li>
                     <li class="contact-me">
                         <button><a class="cont" href="pages/contact-me/index.html">Contact Me</a></button>
@@ -100,9 +100,10 @@
             </a>
         </section>
 <!-- JAVASCRIPT FILE -->
-        <script src="assets/js/script.js"></script>
         <script src="https://code.jquery.com/jquery-3.7.1.js"
             integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4="
-            crossorigin="anonymous"></script>
+            crossorigin="anonymous">
+        </script>
+        <script src="assets/js/script.js"></script>
     </body>
 </html>
