--- a/pages/print-making/index.html
+++ b/pages/print-making/index.html
@@ -89,10 +89,10 @@
             <p class="print-project3"><b>Project 3 </b>(2024)</p>
             <p class="print-project-desc3">Screen Printing - printed a total of four layers.</p>
         <div class="print3-grid">
-            <div class="grid-print3"><img src="prints/print3_bag1.jpg" width="100%" alt=""><p class="print-desc"><b>Screen Print 1 </b><br>Image screen printed onto a canvas bag</p></div>
-            <div class="grid-print3"><img src="prints/print3_print2.jpg" width="100%" alt="."><p class="print-desc"><b>Screen Print 2 </b><br>Image screen printed onto white printmaking paper</p></div>
-            <div class="grid-print3"><img src="prints/print3_print3.jpg" width="100%" alt=""><p class="print-desc"><b>Screen Print 3 </b><br>Image screen printed onto brown drawing paper</p></div>
-            <div class="grid-print3"><img src="prints/print3_print4.jpg" width="100%" alt=""><p class="print-desc"><b>Screen Print 4 </b><br>Image screen printed onto white printmaking paper</p></div>
+            <div class="grid-print3"><img src="prints/print3_bag1.jpg" width="100%" alt="A light pink habiscus flower with a gold outline is screen printed on a dark green canvas tote bag."><p class="print-desc"><b>Screen Print 1 </b><br>Image screen printed onto a canvas bag</p></div>
+            <div class="grid-print3"><img src="prints/print3_print2.jpg" width="100%" alt="A gold habiscus flower with a light pink outline is screen printed onto white paper."><p class="print-desc"><b>Screen Print 2 </b><br>Image screen printed onto white printmaking paper</p></div>
+            <div class="grid-print3"><img src="prints/print3_print3.jpg" width="100%" alt="A purple and pink habiscus flower with a gold outline is screen printed onto brown paper."><p class="print-desc"><b>Screen Print 3 </b><br>Image screen printed onto brown drawing paper</p></div>
+            <div class="grid-print3"><img src="prints/print3_print4.jpg" width="100%" alt="A blue, purple, and light pink habiscus flower with a light purple outline is printed onto white paper."><p class="print-desc"><b>Screen Print 4 </b><br>Image screen printed onto white printmaking paper</p></div>
         </div>
         </section>
             <br><br>
