--- a/pages/animation/index.html
+++ b/pages/animation/index.html
@@ -31,7 +31,7 @@
                 </li>
 <!-- Menu Icon -->
                <button id="mobile-menu-button">
-                <img id="mobile-menu-icon" src="assets/imgs/menu.svg" width="50px">
+                <img id="mobile-menu-icon" src="../../assets/imgs/menu.svg" width="50px">
                 <br>
                 <span id="mobile-menu-text">Menu</span>
             </button>
