--- a/pages/contact-me/index.html
+++ b/pages/contact-me/index.html
@@ -31,7 +31,7 @@
                 </li>
 <!-- Menu Icon -->
                 <button id="mobile-menu-button">
-                    <img id="mobile-menu-icon" src="assets/imgs/menu.svg" width="50px">
+                    <img id="mobile-menu-icon" src="../../assets/imgs/menu.svg" width="50px">
                     <br>
                     <span id="mobile-menu-text">Menu</span>
                 </button>
@@ -76,7 +76,8 @@
 <!-- JAVASCRIPT FILE -->
         <script src="https://code.jquery.com/jquery-3.7.1.js"
             integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4="
-            crossorigin="anonymous"></script>
+            crossorigin="anonymous">
+        </script>
         <script src="../../assets/js/script.js"></script>
     </body>
 </html>
