--- a/index.html
+++ b/index.html
@@ -53,22 +53,27 @@
         
 <!-- Drop Down Menu -->
                 <menu id="menu" class="display-flex display-none-mobile">
-                    <li class="mediums">
-                        <button class="med">Mediums</button>
+                     <li class="mediums">
+                    <button class="med">Mediums</button>
                             <svg width="20px" height="20px" viewBox="0 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path fill-rule="evenodd" clip-rule="evenodd" d="M12.7071 14.7071C12.3166 15.0976 11.6834 15.0976 11.2929 14.7071L6.29289 9.70711C5.90237 9.31658 5.90237 8.68342 6.29289 8.29289C6.68342 7.90237 7.31658 7.90237 7.70711 8.29289L12 12.5858L16.2929 8.29289C16.6834 7.90237 17.3166 7.90237 17.7071 8.29289C18.0976 8.68342 18.0976 9.31658 17.7071 9.70711L12.7071 14.7071Z" fill="#000000"/>
                             </svg>
-                        <div class="dropdown">
+                        <menu class="dropdown">
+                            <li>
                            <a class="paint" href="pages/paintings/index.html">Paintings</a>
+                           </li>
+                           <li>
                            <a class="print" href="pages/print-making/index.html">Print Making</a>
+                           </li>
+                           <li>
                            <a class="anim" href="pages/animation/index.html">Animations</a>
+                           </li>
                         </div>
                     </li>
                     <li class="contact-me">
                         <button><a class="cont" href="pages/contact-me/index.html">Contact Me</a></button>
                     </li>
-                </menu>
-           </menu>     
+                </menu>    
         </nav>
 <!-- ABOUT ME PAGE -->
         <section id="layout">
@@ -100,10 +105,10 @@
             </a>
         </section>
 <!-- JAVASCRIPT FILE -->
-        <script src="https://code.jquery.com/jquery-3.7.1.js"
+    <script src="https://code.jquery.com/jquery-3.7.1.js"
             integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4="
             crossorigin="anonymous">
-        </script>
-        <script src="assets/js/script.js"></script>
+    </script>
+    <script src="assets/js/script.js"></script>
     </body>
 </html>
