--- a/pages/contact-me/index.html
+++ b/pages/contact-me/index.html
@@ -27,14 +27,14 @@
         <nav>
             <menu id="main-menu">
                 <li class="about-me">
-                    <button><a class="about" href="../../index.html">About Me</a></button>
+                    <button class="abt"><a class="about" href="../../index.html">About Me</a></button>
                 </li>
 <!-- Menu Icon -->
-                <button id="mobile-menu-button">
-                    <img id="mobile-menu-icon" src="../../assets/imgs/menu.svg" width="50px">
-                    <br>
-                    <span id="mobile-menu-text">Menu</span>
-                </button>
+            <button id="mobile-menu-button">
+                <img id="mobile-menu-icon" src="../../assets/imgs/menu.svg" width="50px">
+                <br>
+                <span id="mobile-menu-text">Menu</span>
+            </button>
 <!-- Drop Down Menu -->
                 <menu id="menu" class="display-flex display-none-mobile">
                     <li class="mediums">
